# PMiraiKugua

./: README.md  docker-compose.yml
NetMIraiKUgua/: MIraiKUgua.sln  README.md
NetMIraiKUgua/KuguaAPI/: Chat.cs  Dockerfile  KuguaAPI.csproj  KuguaAPI.http  config.json
NetMIraiKUgua/KuguaAPI/Controllers/: ChatController.cs
NetMIraiKUgua/KuguaAPI/Mods/: ModAdmin.cs  ModDice.cs  ModNLP.cs  ModProof.cs  ModRaceHorse.cs  ModRandomChat.cs  ModTextFunction.cs  ModTimerTask.cs
NetMIraiKUgua/KuguaAPI/Properties/: launchSettings.json
NetMIraiKUgua/KuguaAPI/Util/: Config.cs  FileManager.cs  HistoryManager.cs  IOFilter.cs  Logger.cs  Mod.cs  StaticUtil.cs  SystemInfo.cs  WebLinker.cs
NetMIraiKUgua/Old/: FormMonitor.Designer.cs  FormMonitor.cs  FormMonitor.resx  MMDK-o1.csproj  Program.cs
NetMIraiKUgua/Old/Mods/: ModAdmin.cs  ModBank.cs  ModNLP.cs  ModProof.cs  ModRaceHorse.cs  ModRandomChat.cs  ModTextFunction.cs  ModTimerTask.cs  ModTranslate.cs  ModZhanbu.cs
NetMIraiKUgua/Old/Properties/: Resources.Designer.cs  Settings.Designer.cs
NetMIraiKUgua/Old/Util/: Config.cs  GPT.cs  HistoryManager.cs  IOFilter.cs  Logger.cs  MyRandom.cs  PicDealer.cs  SystemInfo.cs  WebLinker.cs
blivechat-dev/: .pdm-python  pyproject.toml  requirements.txt
blivechat-dev/api/: chat.py
miraikugua/: Dockerfile  README.md  base_logger.py  base_mod.py  bot_start.py  main.py  pyproject.toml  setting.yml
miraikugua/mods/: random_chat.py
miraikugua/modules/: random_chat.py  saucenao.py
miraikugua/modules/nlp/: __init__.py
