[project]
name = "blivechat-dev"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "momordica2020", email = "287859992@qq.com"},
]
dependencies = ["tornado>=6.4.1", "aiohttp>=3.10.10", "blivedm>=0.1.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
